...
        android:id="@+id/entryCreateScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBarLayout">

        <LinearLayout
            android:id="@+id/entryCreateScrollViewLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

        <EditText
            android:id="@+id/entryCreateTitleEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Title"
            android:textSize="34sp"/>

            <LinearLayout
...
                    android:text="@string/add_media"
                    app:icon="@drawable/ic_baseline_image_24"
                    tools:srcCompat="@tools:sample/avatars" />
            </LinearLayout>

            <EditText
                android:id="@+id/entryCreateTextEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/entry_text_hint"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/entry_type_desc" />

            <RadioGroup
                android:id="@+id/createEntryRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/createEntryPrivateRadioButton"
                    android:layout_width="match_parent"
...
                        android:hint="@string/add_contributors_here"
                        android:textSize="15sp" />

                </net.cachapa.expandablelayout.ExpandableLayout>

                <RadioButton
                    android:id="@+id/createEntryPublicRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/publicButton" />
            </RadioGroup>

            <Switch
                android:id="@+id/createEntryLocationSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_location_to_entry" />

            <Button
                android:id="@+id/createEntryPostButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:text="@string/post" />

...
