...
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/entryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/entryImageImageView"
        android:textSize="20sp"
        tools:text="Day at the beach" />

    <TextView
        android:id="@+id/entryAuthorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/entryTitle"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/entryImageImageView"
        tools:text="by Meghan" />

    <TextView
        android:id="@+id/entryTimestampTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/entryAuthorTextView"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/entryImageImageView"
        tools:text="Wed Aug 24 2042" />

    <TextView
        android:id="@+id/entryTextTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/entryTimestampTextView"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/entryImageImageView"
        android:ellipsize="end"
...
